--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/main/proto"]
 	path = src/main/proto
-	url = https://github.com/RyssApp/proto.git
+	url = https://github.com/ryssapp/proto.git
